--- a/pages/over-ons.html
+++ b/pages/over-ons.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <title>Over ons</title>
     <style>
-        .font-bodoni {
-            font-family: 'Libre Bodoni', 'Bodoni MT Condensed', serif;
-        }
-
         .font-passenger {
             font-family: "Passenger Serif", serif;
+        }
+        .font-montserrat {
+            font-family: 'Montserrat', sans-serif;
         }
     </style>
 </head>
@@ -110,13 +110,13 @@
 
     <section>
         <div class="container mx-auto px-4 py-5 md:py-12 lg:py-10 text-center">
-            <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-5xl font-bold text-[#722f37] mb-1 md:mb-1">
+            <h1 class="font-passenger text-3xl sm:text-4xl md:text-5xl lg:text-5xl font-bold text-[#722f37] mb-1 md:mb-1">
                 Over CheersTag
             </h1>
         </div>
         <!-- card  -->
         <div
-            class="lg:w-[50%] text-center flex-col justify-center self-center align-center w-auto mx-3 lg:mx-auto my-3 bg-gray-100 rounded-lg shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300">
+            class="lg:w-[50%] text-center flex-col justify-center self-center align-center w-auto mx-3 lg:mx-auto my-3 bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-lg transition-shadow duration-300">
             <!-- Icon  -->
             <div class="flex justify-center my-6">
                 <div class="p-3 rounded-full bg-[#f5e7d6] shadow-sm text-[#722f37]">
@@ -126,16 +126,16 @@
 
             <!-- Card content -->
             <div class="p-6 pt-2 text-center">
-                <p class="text-white text-start">Herken je dat moment? Je opent een fles wijn en denkt: "Van wie heb ik
+                <p class="font-montserrat text-start text-[#5e262c] leading-tight">Herken je dat moment? Je opent een fles wijn en denkt: "Van wie heb ik
                     deze eigenlijk gekregen?" Een klein, menselijk probleem dat we allemaal kennen. Want een cadeau
                     zonder context verliest zijn waarde en je weet niet eens meer wie je zou moeten bedanken.</p>
                 <br>
-                <p class="text-white text-start">Wij bij CheersTag geloven dat elk geschenk een verhaal vertelt. Daarom
+                <p class="font-montserrat text-start text-[#5e262c] leading-tight">Wij bij CheersTag geloven dat elk geschenk een verhaal vertelt. Daarom
                     hebben we CheersTag gecreëerd - een eenvoudige maar krachtige oplossing die elk cadeau verbindt met
                     een blijvende herinnering.</p>
             </div>
             <!-- 3 icons section -->
-            <div class="flex flex-col sm:flex-row justify-center items-center gap-6 p-3 mx-auto rounded-lg">
+            <div class="flex flex-col sm:flex-row justify-center items-center gap-6 p-3 mx-auto rounded-lg my-4">
                 <!-- Icon 1 -->
                 <div class="flex flex-col items-center gap-2 w-full sm:w-auto px-2">
                     <!-- Icon Container -->
@@ -169,20 +169,20 @@
                 </div>
             </div>
             <!-- Card content -->
-            <div class="p-6 pt-2 text-center">
-                <p class="text-white text-start">Hoe? Met onze unieke CheersTag kaartjes, voorzien van een persoonlijke
+            <div class="p-6 text-center">
+                <p class="font-montserrat text-start text-[#5e262c] leading-tight">Hoe? Met onze unieke CheersTag kaartjes, voorzien van een persoonlijke
                     QR- code. Schrijf een kort berichtje op het kaartje én voeg een digitale dimensie toe: een video
                     waarin je lacht, een audiobericht met je stem, of een
                     persoonlijke tekst die jarenlang bewaard blijft.</p>
                 <br>
-                <p class="text-white text-start">Geen apps nodig, gewoon scannen. Als de ontvanger maanden later de QR-
+                <p class="font-montserrat text-start text-[#5e262c] leading-tight">Geen apps nodig, gewoon scannen. Als de ontvanger maanden later de QR-
                     code opnieuw scant, komt jouw persoonlijke boodschap meteen tevoorschijn - een emotioneel moment dat
                     het geschenk opnieuw tot leven brengt. En met één tik kan de ontvanger je direct bedanken.</p>
                 <br>
-                <p class="text-white text-start">CheersTag verbindt mensen, niet alleen door wat we geven, maar ook door
+                <p class="font-montserrat text-start text-[#5e262c] leading-tight">CheersTag verbindt mensen, niet alleen door wat we geven, maar ook door
                     hoe we het geven. Een kleine, betaalbare toevoeging met een onbetaalbare emotionele waarde.</p>
             </div>
-            <p class="text-base sm:text-lg md:text-md my-3 text-[#722f37] leading-relaxed md:leading-loose">
+            <p class="text-base sm:text-lg md:text-md my-3 text-[#722f37] leading-relaxed md:leading-loose font-normal font-passenger">
                 Want een goed geschenk verdient een blijvende herinnering.
             </p>
         </div>
