--- a/pages/werkt.html
+++ b/pages/werkt.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <title>Hoe het werkt</title>
     <style>
-        .font-bodoni {
-            font-family: 'Libre Bodoni', 'Bodoni MT Condensed', serif;
-        }
-
         .font-passenger {
             font-family: "Passenger Serif", serif;
+        }
+        .font-montserrat {
+            font-family: 'Montserrat', sans-serif;
         }
     </style>
 </head>
@@ -112,11 +112,11 @@
     <section class="bg-[#f4e6d3] shadow-lg">
 
         <div class="container mx-auto px-4 py-5 md:py-12 lg:py-10 text-center">
-            <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-5xl font-bold text-[#722f37] mb-1 md:mb-1">
+            <h1 class="font-passenger text-3xl sm:text-4xl md:text-5xl lg:text-5xl font-bold text-[#722f37] mb-1 md:mb-1">
                 Zo werkt het
             </h1>
 
-            <p class="text-base sm:text-lg md:text-xl text-[#722f37] leading-relaxed md:leading-loose">
+            <p class="font-montserrat text-base sm:text-lg md:text-xl text-[#722f37] leading-relaxed md:leading-loose">
                 In enkele eenvoudige stappen maak je van elk cadeau een blijvende herinnering
             </p>
         </div>
@@ -127,9 +127,9 @@
                         class="w-7 h-7 flex items-center justify-center self-start mt-2 mx-2 shrink-0 bg-[#722f37] rounded-full">
                         <p class="text-white text-center">1</p>
                     </div>
-                    <div class="p-2">
-                        <p class="font-semibold text-lg text-start leading-tight">Tool with sidebar</p>
-                        <p class="text-gray-600 text-start leading-tight">Description of tool</p>
+                    <div class="p-2 space-y-1">
+                        <p class="font-semibold text-lg text-start leading-tight font-passenger text-[#722f37]">Scan de QR</p>
+                        <p class="text-gray-600 text-start text-sm leading-tight font-montserrat">Gebruik de QR-code op het CheersTag kaartje</p>
                     </div>
                 </li>
                 <li class="flex justify-start shadow align-center rounded-md bg-gray-100 p-2">
@@ -137,9 +137,9 @@
                         class="w-7 h-7 flex items-center justify-center self-start mt-2 mx-2 shrink-0 bg-[#722f37] rounded-full">
                         <p class="text-white text-center">2</p>
                     </div>
-                    <div class="p-2">
-                        <p class="font-semibold text-lg text-start leading-tight">Tool with sidebar</p>
-                        <p class="text-gray-600 text-start leading-tight">Description of tool</p>
+                    <div class="p-2 space-y-1">
+                        <p class="font-semibold text-lg text-start leading-tight font-passenger text-[#722f37]">Maak het persoonlijk</p>
+                        <p class="text-gray-600 text-start text-sm leading-tight font-montserrat">Voeg je eigen tekst, foto of video toe die een glimlach tovert</p>
                     </div>
                 </li>
                 <li class="flex justify-start shadow align-center rounded-md bg-gray-100 p-2">
@@ -147,9 +147,9 @@
                         class="w-7 h-7 flex items-center justify-center self-start mt-2 mx-2 shrink-0 bg-[#722f37] rounded-full">
                         <p class="text-white text-center">3</p>
                     </div>
-                    <div class="p-2">
-                        <p class="font-semibold text-lg text-start leading-tight">Tool with sidebar</p>
-                        <p class="text-gray-600 text-start leading-tight">Description of tool</p>
+                    <div class="p-2 space-y-1">
+                        <p class="font-semibold text-lg text-start leading-tight font-passenger text-[#722f37]">Klaar!</p>
+                        <p class="text-gray-600 text-start text-sm leading-tight font-montserrat">Je cadeau heeft nu een digitaal hartje gekregen</p>
                     </div>
                 </li>
                 <li class="flex justify-start shadow align-center rounded-md bg-gray-100 p-2">
@@ -157,9 +157,9 @@
                         class="w-7 h-7 flex items-center justify-center self-start mt-2 mx-2 shrink-0 bg-[#722f37] rounded-full">
                         <p class="text-white text-center">4</p>
                     </div>
-                    <div class="p-2">
-                        <p class="font-semibold text-lg text-start leading-tight">Tool with sidebar</p>
-                        <p class="text-gray-600 text-start leading-tight">Description of tool</p>
+                    <div class="p-2 space-y-1">
+                        <p class="font-semibold text-lg text-start leading-tight font-passenger text-[#722f37]">Voor altijd verbonden</p>
+                        <p class="text-gray-600 text-start text-sm leading-tight font-montserrat ">Wanneer de ontvanger later de QR scant, zien ze jouw speciale boodschap terug</p>
                     </div>
                 </li>
                 <li class="flex justify-start shadow align-center rounded-md bg-gray-100 p-2">
@@ -167,9 +167,9 @@
                         class="w-7 h-7 flex items-center justify-center self-start mt-2 mx-2 shrink-0 bg-[#722f37] rounded-full">
                         <p class="text-white text-center">5</p>
                     </div>
-                    <div class="p-2">
-                        <p class="font-semibold text-lg text-start leading-tight">Tool with sidebar</p>
-                        <p class="text-gray-600 text-start leading-tight">Description of tool</p>
+                    <div class="p-2 space-y-1">
+                        <p class="font-semibold text-lg text-start leading-tight font-passenger text-[#722f37]">Direct bedanken</p>
+                        <p class="text-gray-600 text-start text-sm leading-tight font-montserrat">Met één tik kan de ontvanger een warm bedankje terug sturen</p>
                     </div>
                 </li>
                 <li class="flex justify-start shadow align-center rounded-md bg-gray-100 p-2">
@@ -177,16 +177,16 @@
                         class="w-7 h-7 flex items-center justify-center self-start mt-2 mx-2 shrink-0 bg-[#722f37] rounded-full">
                         <p class="text-white text-center">6</p>
                     </div>
-                    <div class="p-2">
-                        <p class="font-semibold text-lg text-start leading-tight">Tool with sidebar</p>
-                        <p class="text-gray-600 text-start leading-tight">Description of tool</p>
+                    <div class="p-2 space-y-1">
+                        <p class="font-semibold text-lg text-start leading-tight font-passenger text-[#722f37]">Herinneringen die blijven</p>
+                        <p class="text-gray-600 text-start text-sm leading-tight font-montserrat">Een klein gebaar dat jaren later nog steeds een lach brengt</p>
                     </div>
                 </li>
 
             </ol>
         </div>
         <div class="mx-auto py-5  text-center items-center">
-            <p class="text-base sm:text-lg md:text-xl text-[#722f37] leading-relaxed md:leading-loose">
+            <p class="text-base sm:text-md md:text-lg text-[#722f37] leading-relaxed md:leading-loose font-montserrat">
                 Klaar om je eerste digitale boodschap te maken?
             </p>
             <button
