--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <title>CheersTag</title>
     <style>
-        .font-bodoni {
-            font-family: 'Libre Bodoni', 'Bodoni MT Condensed', serif;
-        }
-
         .font-passenger {
             font-family: "Passenger Serif", serif;
+        }
+
+        .font-montserrat {
+            font-family: 'Montserrat', sans-serif;
         }
     </style>
 </head>
@@ -109,11 +110,12 @@
     <!-- navbar section ended -->
     <section>
         <div class="container mx-auto px-4 py-5 md:py-12 lg:py-10 text-center w-[60%] mt-20">
-            <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-5xl font-bold text-[#722f37] mb-1 md:mb-1">
+            <h1
+                class="text-3xl sm:text-4xl md:text-5xl lg:text-5xl font-bold text-[#722f37] mb-1 md:mb-1 font-passenger">
                 Verbind geschenken met <br> persoonlijke <br> boodschappen
             </h1>
 
-            <p class="text-base sm:text-lg md:text-xl text-[#722f37] leading-tight">
+            <p class="text-base sm:text-lg md:text-xl text-[#722f37] leading-tight font-montserrat mt-4">
                 Maak van elk cadeau een blijvende herinnering met een <br> digitale boodschap.
             </p>
         </div>
@@ -121,21 +123,22 @@
         <div class="flex flex-col sm:flex-row gap-4 w-full max-w-[70%] mx-auto p-4">
             <!-- first Button -->
             <a href="./pages/boodschap.html"
-                class="flex-1 bg-[#722f37] hover:bg-[#5a252c] text-white font-medium py-4 px-6 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 text-center">
-
+                class="flex-1 bg-[#722f37] hover:bg-[#5a252c] text-white font-medium py-4 px-6 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 text-center transform hover:scale-[1.02]">
                 <button>
                     <h3 class="text-start font-bold cursor-pointer">Maak je unieke boodschap</h3>
-                    <p class="text-start font-normal cursor-pointer">Creëer direct een persoonlijke video, foto of
+                    <p class="text-start font-normal cursor-pointer font-montserrat">Creëer direct een persoonlijke
+                        video, foto of
                         tekst die je cadeau onvergetelijk maakt!</p>
                 </button>
             </a>
 
             <!-- Second Button -->
             <a href="./pages/werkt.html"
-                class="flex-1 border-2 border-[#722f37] text-[#722f37] hover:bg-gray-50 font-medium py-4 px-6 rounded-lg shadow-sm hover:shadow-md transition-all duration-300 text-center">
+                class="flex-1 border-2 border-[#722f37] text-[#722f37] hover:bg-gray-50 font-medium py-4 px-6 rounded-lg shadow-sm hover:shadow-md transition-all duration-300 text-center transform hover:scale-[1.02]">
                 <button>
                     <h3 class="text-start font-bold cursor-pointer">Hoe het werkt</h3>
-                    <p class="text-start font-normal cursor-pointer">Ontdek snel en eenvoudig hoe je in enkele
+                    <p class="text-start font-normal font-montserrat cursor-pointer">Ontdek snel en eenvoudig hoe je in
+                        enkele
                         stappen je eigen digitale geschenk verbindt.</p>
                 </button>
             </a>
