--- a/pages/over-ons.html
+++ b/pages/over-ons.html
@@ -125,12 +125,12 @@
             </div>
 
             <!-- Card content -->
-            <div class="p-6 pt-2 text-center">
-                <p class="font-montserrat text-start text-[#5e262c] leading-tight">Herken je dat moment? Je opent een fles wijn en denkt: "Van wie heb ik
+            <div class="p-4 pt-2 text-center">
+                <p class="font-montserrat text-start text-[#5e262c] leading-relaxed">Herken je dat moment? Je opent een fles wijn en denkt: "Van wie heb ik
                     deze eigenlijk gekregen?" Een klein, menselijk probleem dat we allemaal kennen. Want een cadeau
                     zonder context verliest zijn waarde en je weet niet eens meer wie je zou moeten bedanken.</p>
                 <br>
-                <p class="font-montserrat text-start text-[#5e262c] leading-tight">Wij bij CheersTag geloven dat elk geschenk een verhaal vertelt. Daarom
+                <p class="text-base sm:text-md md:text-lg text-[#722f37] leading-tight font-montserrat mt-4">Wij bij CheersTag geloven dat elk geschenk een verhaal vertelt. Daarom
                     hebben we CheersTag gecreëerd - een eenvoudige maar krachtige oplossing die elk cadeau verbindt met
                     een blijvende herinnering.</p>
             </div>
