--- a/pages/partners.html
+++ b/pages/partners.html
@@ -117,12 +117,12 @@
     <section class="my-8">
 
         <div class="container flex-col justify-center mx-auto px-4 py-5 md:py-12 lg:py-10 lg:w-[50%]">
-            <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-5xl font-bold text-[#722f37] mb-1 md:mb-1 text-start">
-                Zo werkt het
+            <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-5xl font-bold text-[#722f37] mb-1 md:mb-1 text-start font-passenger">
+                Vind je VinNote
             </h1>
 
-            <p class="text-base sm:text-lg md:text-xl text-[#722f37] leading-relaxed md:leading-loose">
-                In enkele eenvoudige stappen maak je van elk cadeau een blijvende herinnering
+            <p class="text-base sm:text-lg md:text-xl text-[#722f37] leading-relaxed md:leading-loose font-montserrat">
+                Onze partners delen onze passie voor betekenisvolle herinneringen. Ontdek waar je VinNote kaartjes kunt vinden om jouw geschenken een blijvende emotionele waarde te geven.
             </p>
         </div>
         <div class="flex justify-center w-full">
@@ -132,13 +132,13 @@
 
                     <!-- Selector -->
                     <select
-                        class="block w-full sm:w-auto min-w-[180px] px-3 py-2 text-sm border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-[#722f37] focus:border-[#722f37] transition-all">
+                        class="block w-full font-montserrat sm:w-auto min-w-[180px] px-3 py-2 text-sm border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-[#722f37] focus:border-[#722f37] transition-all">
                         <option>Alle locaties</option>
                         <option>Option 1</option>
                         <option>Option 2</option>
                         <option>Option 3</option>
                     </select>
-                    <label class="text-sm font-medium text-gray-700 whitespace-nowrap leading-tight">
+                    <label class="text-sm font-medium text-gray-600 whitespace-nowrap leading-tight font-montserrat">
                         5 partners gevonden
                     </label>
                 </div>
